# options_assembler

./: .editorconfig  .gitignore  .gitmodules  Dockerfile  README.md  options_pricing_backend.py  package-lock.json  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md
demo/: Options for Smart Investor.ipynb  Sheldon N. Option Volatility and Pricing.ipynb  ideas.md
demo/books_and_articles_reproducing/: Checkulaev M - Zagadki i tayny_optionnoy_torgovli.ipynb  Options for Smart Investor.ipynb
demo/etl_example/deribit/: Dockerfile  _build_and_save_docker.sh  build_etl_deribit_docker.sh  deribit_etl_join_updates_to_EOD.py  deribit_etl_run.py  run_deribit_etl.sh
demo/etl_example/moex/: Dockerfile  build_etl_moex_docker.sh  moex_etl_join_updates_to_EOD.py  moex_etl_run.py  run_moex_etl.sh
docs/: .gitignore
docs/components/: SideNav.tsx
docs/pages/: _app.tsx  index.md
docs/pages/data/: index.md
docs/pages/demo/: index.md
docs/public/: globals.css
old/: opt_lib.py  option_pricer.py
old/data/binance/: client.py  client_test.py  exception.py  options.py
old/data/deribit/: README.md  client.py  exception.py  update_deribit_example.py
old/data/moex/: moex.txt
old/data/provider/: data_entities.py
scripts/: docker_etl_deribit.sh  run_deribit_etl.sh
src/etl_example/: deribit_etl_run.py
src/exchange/: __init__.py  _abstract_exchange.py  binance.py  cache.py  deribit.py  exchange_entities.py  exchange_exception.py  exchange_fabric.py  exchange_provider_factory.py  moex.py
src/messanger/: __init__.py  message_class.py  stdandard.py  telegram.py
src/option_etl/: __init__.py  deribit_etl.py  etl_class.py  etl_updates_to_history.py
src/option_lib/: __init__.py  option_class.py  option_data_class.py
src/option_lib/analytic/: __init__.py  analityc_class.py
src/option_lib/chain/: __init__.py  _chain_class.py  chain_selector.py  desk.py  price_status.py
src/option_lib/chart/: __init__.py  chart_class.py
src/option_lib/enrichment/: __init__.py  _enrichment_class.py  _option_with_future.py  chain.py  enrichment_class.py  money.py  option_with_future.py  price.py
src/option_lib/entities/: __init__.py  _asset_types.py  _currency.py  _dataframe_columns.py  _instrument_types.py  _option_leg.py  _option_types.py  _pandas_columns.py  _period_types.py  _provider_pandas_columns.py  _timeframe_types.py  enum_code.py
src/option_lib/etl/: deribit_etl.py  deribit_etl_run.py  etl_class.py  etl_updates_to_history.py
src/option_lib/normalization/: __init__.py  datetime_conversion.py  price.py  timeframe_resample.py
src/option_lib/provider/: __init__.py  _abstract_provider_class.py  _file_provider.py  _local_provider.py  _provider_entities.py  provider_factory.py
src/options_assembler/: __init__.py  option_class.py  option_data_class.py
src/options_assembler/analytic/: __init__.py  analityc_class.py
src/options_assembler/chain/: __init__.py  _chain_class.py  chain_selector.py  desk.py  price_status.py
src/options_assembler/chart/: __init__.py  chart_class.py
src/options_assembler/enrichment/: __init__.py  _enrichment_class.py  price.py  (+1 more)
src/options_etl/: __init__.py  deribit_etl.py  etl_class.py  etl_updates_to_history.py  moex_etl.py
src/provider/: __init__.py  _abstract_provider_class.py  _file_provider.py  _local_provider.py  _provider_entities.py
tests/: conftest.py
(+180 files in other folders)
