[tool.poetry]
name = "option_lib"
version = "0.1.1"
authors = ["akumidv"]
description = "Option library for study purpouse"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"
chart-studio = "^1.1.0"
jupyter = "^1.1.1"
pyarrow = "^18.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pylint = "^3.3.2"
pytest-dotenv = "^0.5.2"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = [
    "test.env"
]

[tool.pylint.MASTER]
init-hook='import sys; sys.path.append("./src")'
no-docstring-rgx='^_|^test_' # _private and test_ fucntions


[tool.pylint.FORMAT]
max-line-length=120

