#[tool.poetry]
[project]
name = "option_assembler"
version = "0.1.1"
authors = [
    {name ="Andrei Kuminov", email ="akumidv@yandex.ru"}
]
description = "Option library for study purpouse"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pydantic = "^2.10.5"
chart-studio = "^1.1.0"
pyarrow = "^19.0.0"
httpx = "^0.28.1"
matplotlib = "^3.9.0"



[tool.poetry.group.etl]
optional = true

[tool.poetry.group.etl.dependencies]
apscheduler = "^3.11.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.0"
jupyter = "^1.1.1"
pylint = "^3.3.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.2"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
env_files = [
    "test.env"
]
testpaths = [
    "tests",
]


[tool.pylint.MASTER]
extension-pkg-whitelist = 'numpy'
init-hook = 'import sys; sys.path.append("./src"); sys.path.append("./tests")'
no-docstring-rgx = '^_|^test_' # _private and test_ fucntions
protected-access = '^test_'

[tool.pylint.basic]
good-names='logger'
ignore='vendor'

[tool.pylint.DESIGN]
max-positional-arguments = 6
max-args = 8

[tool.pylint.typecheck]
ignored-modules='numpy'

[tool.pylint.FORMAT]
max-line-length = 120
